k8s/base/ingress-nginx-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ingress-nginx
    spec:
      serviceAccountName: ingress-nginx
      containers:
      - name: controller
        image: registry.k8s.io/ingress-nginx/controller:v1.14.3
        args:
          - /nginx-ingress-controller
          - --controller-class=k8s.io/ingress-nginx
          - --ingress-class=nginx
          # Ce paramètre pointe vers la ConfigMap créée ci-dessus
          - --configmap=$(POD_NAMESPACE)/ingress-nginx-controller
          - --validating-webhook=:8443
          - --validating-webhook-certificate=/usr/local/certificates/cert
          - --validating-webhook-key=/usr/local/certificates/key
        ports:
          - name: http
            containerPort: 80
          - name: https
            containerPort: 443
          - name: webhook
            containerPort: 8443
        volumeMounts:
          - name: webhook-cert
            mountPath: /usr/local/certificates/
            readOnly: true
      volumes:
        - name: webhook-cert
          secret:
            secretName: ingress-nginx-admission
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.6.226
spec:
  type: LoadBalancer
  # Maintient l'IP source d'origine en évitant le SNAT du kube-proxy
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: ingress-nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
